# pet-monitor-app

./: .editorconfig  .gitignore  .release-please-manifest.json  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  build.rs  build.sh  docker-compose.yml  flake.nix  nginx.conf  openapi.yml  package-lock.json  package.json  pre-commit.sh  production.docker-compose.yml  release-please-config.json  rust-toolchain.toml  tsconfig.json
.github/: dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql-analysis.yml  docker-image.yml  docker-push.yml  lint.yml  publish.yml  release-please.yml  rust.yml  test.yml
api/: .prettierrc.toml  Cargo.toml  Dockerfile  main.rs  package-lock.json  package.json  password.json  tsconfig.json
api/src/: auth.rs  index.ts  lib.rs  main.rs  routes.rs  secrets.rs  tests.rs
api/src/auth/: index.ts  mod.rs  tests.rs
api/src/routes/: auth.ts  index.ts  stream.ts
client/: .dockerignore  .eslintrc.yml  .pnp.cjs  .prettierignore  .prettierrc.json  .prettierrc.yml  .proxyrc.json  Dockerfile  README.md  build.tar.zst  index.html  nginx.conf  no_tls.nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  production.Dockerfile  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
client/public/: index.html
client/src/: App.tsx  app.html  auth.ts  context.ts  index.html  index.tsx  login.ts  main.ts  model.ts  store.ts  style.css
client/src/components/: App.tsx  LiveCam.tsx  LoginMenu.tsx  NotFound.tsx  Spinner.tsx  index.ts
client/src/components/App/: index.tsx
client/src/components/LiveCam/: index.tsx
client/src/components/LoginMenu/: index.tsx  style.css
client/src/components/NavButton/: index.tsx
client/src/components/Navbar/: index.tsx  style.css
client/src/components/RecentActivity/: index.tsx
client/src/hooks/: index.tsx
client/src/lib/: index.ts
client/src/routes/: +layout.svelte  +page.svelte  +page.ts  Camera.tsx  Login.tsx  Logout.tsx  Main.tsx  NotFoundRoute.tsx  index.ts  styles.css
client/src/routes/config/: +page.svelte  +page.ts  Form.svelte
client/src/routes/login/: +page.svelte
client/src/routes/stream/: +page.svelte  +page.ts
client/tests/: test.ts
crates/bmff/: CHANGELOG.md  Cargo.toml  README.md
crates/bmff/src/: lib.rs
crates/mp4-stream/: CHANGELOG.md  Cargo.toml  README.md
crates/mp4-stream/src/: capabilities.rs  config.rs  lib.rs
crates/pet-monitor-app/: CHANGELOG.md  Cargo.toml
crates/pet-monitor-app/src/: auth.rs  config.rs  handlers.rs  lib.rs
crates/pet-monitor-app/static/: 404.html  config.html  login.html  stream.html  style.css
crates/pet-monitor-app/tests/: base_redirect.rs  login.rs
crates/pet-monitor-app/tests/common/: mod.rs
crates/pet-monitor-app/tests/testsuite/: base_redirect.rs  common.rs  login.rs  main.rs
crates/pet-monitor-app/tests/testsuite/common/: assert.rs  cmd.rs  mod.rs  request.rs
doc/: pet-monitor-app.1.scd  pet-monitor-app.5.scd
fmp4-stream/: Cargo.toml
fmp4-stream/src/: capabilities.rs  config.rs  lib.rs
mp4-stream/: Cargo.toml
mp4-stream/src/: boxes.rs  capabilities.rs  config.rs  lib.rs
pet-monitor-app/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  pet-monitor-app.toml  production.Dockerfile
pet-monitor-app/proptest-regressions/server/auth/: tests.txt
pet-monitor-app/src/: auth.rs  bmff.rs  cli.rs  config.rs  handlers.rs  lib.rs  main.rs  routes.rs  secrets.rs  stream.rs  tests.rs
pet-monitor-app/src/auth/: mod.rs  tests.rs
pet-monitor-app/src/cli/: tests.rs
pet-monitor-app/src/fmp4/: boxes.rs  mod.rs
pet-monitor-app/src/server/: auth.rs  handlers.rs  mod.rs  provider.rs  routes.rs
pet-monitor-app/src/server/auth/: mod.rs  tests.rs
pet-monitor-app/src/server/fmp4/: boxes.rs  capabilities.rs  mod.rs
pet-monitor-app/tests/: cli.rs  server.rs
scripts/: build.sh  check.sh  lint.sh  test.sh
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/api/: gql.rs  mod.rs
server/src/stream/: mod.rs
src/: auth.rs  gql.rs  lib.rs  main.rs  routes.rs
src/auth/: mod.rs  tests.rs
src/client/: index.html  index.tsx
src/client/components/App/: index.tsx
src/client/components/LoginMenu/: index.tsx
src/client/components/NavButton/: style.css
src/client/components/Navbar/: index.tsx  style.css
src/client/components/RecentActivity/: index.tsx
v4l-streamer/: Cargo.toml
v4l-streamer/src/: bmff.rs  lib.rs  tests.rs
video/: Cargo.toml
