[workspace]
members = ["crates/pet-monitor-app", "crates/mp4-stream", "crates/bmff"]
default-members = ["crates/pet-monitor-app"]

[workspace.package]
authors = ["Sam Nystrom <samuel.l.nystrom@gmail.com>"]
edition = "2021"
rust-version = "1.66"
homepage = "https://github.com/Stonks3141/pet-monitor-app"
repository = "https://github.com/Stonks3141/pet-monitor-app"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3"
tower = { version = "0.4", features = ["limit", "buffer", "load-shed"] }
tower-http = {version = "0.4", features = ["trace"] }
hyper = "0.14"
tokio = { version = "1.26", features = ["rt", "rt-multi-thread", "macros", "fs"] }
futures-lite = "1.12"
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
parking_lot = "0.12"
flume = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2"
tracing-error = "0.2"
include_dir = "0.7"
xflags = "0.3"
confy = "0.5"
serde_with = { version = "2.2", features = ["base64"] }
serde_json = "1.0"
serde_qs = "0.12"
percent-encoding = "2.2"
color-eyre = "0.6"
tower-cookies = "0.9"
ring = "0.16"
jsonwebtoken = "8.2"
rust-argon2 = "1.0"
mp4-stream = { version = "0.1", features = ["serde", "tracing"] }
quick-error = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
chrono = "0.4"
bitflags = "1.3"
fixed = "1.23"
rscam = { version = "0.5", features = ["no_wrapper"] }
x264 = "0.5"
bmff = "0.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
# debug = true

[profile.dev.package.rust-argon2]
opt-level = 3
