[workspace]
members = ["crates/pet-monitor-app", "crates/mp4-stream", "crates/bmff"]
default-members = ["crates/pet-monitor-app"]
resolver = "2"

[workspace.package]
authors = ["Sam Nystrom <sam@samnystrom.dev>"]
edition = "2021"
rust-version = "1.66"
homepage = "https://github.com/Stonks3141/pet-monitor-app"
repository = "https://github.com/Stonks3141/pet-monitor-app"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.6", features = ["headers"] }
tower = "0.4"
hyper = "0.14"
tokio = { version = "1.33", features = ["rt", "macros", "fs", "io-util"] }
futures-lite = "2.0"
flume = "0.11"
log = "0.4"
env_logger = "0.10"
include_dir = "0.7"
xflags = "0.3"
confy = "0.5"
termion = "2.0"
serde_with = { version = "3.4", features = ["base64"] }
serde_json = "1.0"
serde_qs = "0.12"
percent-encoding = "2.3"
anyhow = "1.0"
tower-cookies = "0.9"
ring = "0.17"
jsonwebtoken = "8.3"
rust-argon2 = "2.0"
mp4-stream = { path = "crates/mp4-stream", features = ["serde", "log"] }
quick-error = "2.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
bitflags = "2.4"
fixed = "1.24"
rscam = { version = "0.5", features = ["no_wrapper"] }
x264 = "0.5"
bmff = { path = "crates/bmff" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
# debug = true

[profile.dev.package.rust-argon2]
opt-level = 3
