[package]
name = "mp4-stream"
version = "0.1.0"
authors = ["Sam Nystrom <samuel.l.nystrom@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "High-level library for fMP4 streaming"
documentation = "https://github.com/Stonks3141/pet-monitor-app"
readme = "https://github.com/Stonks3141/pet-monitor-app#readme"
homepage = "https://github.com/Stonks3141/pet-monitor-app"
repository = "https://github.com/Stonks3141/pet-monitor-app"
license = "MIT"
keywords = ["video", "streaming", "media", "fmp4"]
categories = ["multimedia"]

[dependencies]
flume = "0.10"
quick-error = "2.0"
tracing = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_repr = "0.1"
chrono = "0.4"
bitflags = "1.3"
fixed = "1.22"
rscam = { version = "0.5", features = ["no_wrapper"] }
x264 = "0.5"
futures-lite = "1.12"
