[package]
name = "pet-monitor-app"
version = "0.1.0"
authors = ["Sam Nystrom <samuel.l.nystrom@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "Simple and secure pet monitor for Raspberry Pi"
documentation = "https://github.com/Stonks3141/pet-monitor-app"
readme = "https://github.com/Stonks3141/pet-monitor-app#readme"
homepage = "https://github.com/Stonks3141/pet-monitor-app"
repository = "https://github.com/Stonks3141/pet-monitor-app"
license = "MIT"
keywords = ["cli", "video", "server", "streaming", "media"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
parking_lot = "0.12"
flume = "0.10"
log = "0.4"
simple_logger = "4.0"
include_dir = "0.7"
confy = "0.5"
clap = "4.0"
serde = "1.0"
serde_with = { version = "2.1", features = ["base64", "chrono_0_4"] }
anyhow = "1.0"
chrono = "0.4"
ring = "0.16"
jsonwebtoken = "8.1"
rust-argon2 = "1.0"
mp4-stream = { version = "0.1.0", features = ["tokio", "quickcheck", "serde"], path = "../mp4-stream" }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"
quickcheck = "1.0"
reqwest = { version = "0.11", features = ["cookies"] }
tokio = { version = "1.22", features = ["rt", "macros", "time", "process"] }
futures = { version = "0.3", features = ["executor"] }
mp4-stream = { version = "0.1.0", features = ["quickcheck"], path = "../mp4-stream" }
once_cell = "1.16"

[[bin]]
name = "pet-monitor-app"
path = "src/main.rs"
