[package]
name = "pet-monitor-app"
version = "22.12.0"
authors = ["Sam Nystrom <samuel.l.nystrom@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "A simple and secure pet monitor for Raspberry Pi"
documentation = "https://github.com/Stonks3141/pet-monitor-app"
readme = "../README.md"
homepage = "https://github.com/Stonks3141/pet-monitor-app"
repository = "https://github.com/Stonks3141/pet-monitor-app"
license = "MIT"
keywords = ["cli", "video", "server", "streaming", "media"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3"
tower = "0.4"
hyper = "0.14"
tokio = { version = "1.24", features = ["rt", "rt-multi-thread", "macros"] }
futures-lite = "1.12"
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
parking_lot = "0.12"
flume = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
include_dir = "0.7"
clap = { version = "4.1", features = ["derive"] }
confy = "0.5"
serde = "1.0"
serde_with = { version = "2.2", features = ["base64"] }
anyhow = "1.0"
mime_guess = "2.0"
ring = "0.16"
jsonwebtoken = "8.2"
rust-argon2 = "1.0"
mp4-stream = { version = "0.1.0", features = ["serde", "tracing"], path = "../mp4-stream" }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
reqwest = { version = "0.11", features = ["cookies"] }
tokio = { version = "1.24", features = ["time", "process"] }

[[bin]]
name = "pet-monitor-app"
path = "src/main.rs"
