[package]
name = "pet-monitor-app"
version = "0.2.0"
description = "A simple and secure pet monitor for Raspberry Pi"
documentation = "https://github.com/Stonks3141/pet-monitor-app"
keywords = ["cli", "video", "server", "streaming", "media"]
categories = ["command-line-utilities", "multimedia"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3"
tower = "0.4"
tower-http = {version = "0.3", features = ["trace"] }
hyper = "0.14"
tokio = { version = "1.25", features = ["rt", "rt-multi-thread", "macros", "fs"] }
futures-lite = "1.12"
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
parking_lot = "0.12"
flume = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2"
include_dir = "0.7"
clap = { version = "4.1", features = ["derive"] }
confy = "0.5"
serde = "1.0"
serde_with = { version = "2.2", features = ["base64"] }
serde_json = "1.0"
color-eyre = "0.6"
tower-cookies = "0.8"
cookie = "0.16"
mime_guess = "2.0"
ring = "0.16"
jsonwebtoken = "8.2"
rust-argon2 = "1.0"
mp4-stream = { version = "0.1.0", features = ["serde", "tracing"], path = "../mp4-stream" }

[package.metadata.cargo-udeps.ignore]
normal = ["include_dir"]

[[bin]]
name = "pet-monitor-app"
