[package]
name = "bmff"
version = "0.3.0"
description = "Low-level definitions for the Base Media File Format"
documentation = "https://docs.rs/bmff"
readme = "README.md"
keywords = ["video", "streaming", "media", "mp4", "bmff"]
categories = ["multimedia"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
bitflags.workspace = true
fixed.workspace = true
