[package]
name = "pet-monitor-app"
version = "0.3.0"
description = "A simple and secure pet monitor for Raspberry Pi"
documentation = "https://github.com/Stonks3141/pet-monitor-app"
readme = "../README.md"
keywords = ["cli", "video", "server", "streaming", "media"]
categories = ["command-line-utilities", "multimedia"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
axum-macros.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio.workspace = true
futures-lite.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
parking_lot.workspace = true
flume.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
include_dir.workspace = true
clap.workspace = true
confy.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
serde_qs.workspace = true
percent-encoding.workspace = true
color-eyre.workspace = true
tower-cookies.workspace = true
cookie.workspace = true
ring.workspace = true
jsonwebtoken.workspace = true
rust-argon2.workspace = true
mp4-stream.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["include_dir"]

[[bin]]
name = "pet-monitor-app"
