[package]
name = "pet-monitor-app"
version = "0.3.1"
description = "A simple and secure pet monitor for Linux"
documentation = "https://github.com/Stonks3141/pet-monitor-app"
readme = "../../README.md"
keywords = ["cli", "video", "server", "streaming", "media"]
categories = ["command-line-utilities", "multimedia"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
hyper.workspace = true
tokio.workspace = true
futures-lite.workspace = true
flume.workspace = true
log.workspace = true
env_logger.workspace = true
include_dir.workspace = true
xflags.workspace = true
confy.workspace = true
termion.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
serde_qs.workspace = true
percent-encoding.workspace = true
anyhow.workspace = true
tower-cookies.workspace = true
ring.workspace = true
jsonwebtoken.workspace = true
rust-argon2.workspace = true
mp4-stream.workspace = true

[dev-dependencies]
ureq = "2.9.7"
tempfile = "3.8"
toml = "0.8"

[[bin]]
name = "pet-monitor-app"
